# bittensor-nexus-library

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  noxfile.py  pyproject.toml
bittensor-nexus-library/: .cruft.json  .gitignore  AGENTS.md  CHANGELOG.md  README.md  noxfile.py  pyproject.toml
bittensor-nexus-library/docs/validator-authoring/reference/: component-registry.yaml
bittensor-nexus-library/nexus/: nexus_validator.py
bittensor-nexus-library/nexus/actors/: metagraph_source.py  openrouter_selection.py  pylon_client_provider.py  retry_strategy.py  task_input_output_creator.py  weight_setter.py
bittensor-nexus-library/nexus/actors/executor_communicator/: async_http_neuron_service.py  callback_http_server_runtime.py  embedded_executor_communicator.py  http_server_lifecycle.py  sender_loop_runtime.py  timeout_sweep_runtime.py
bittensor-nexus-library/nexus/core/dsl/: flow.py  piping.py
bittensor-nexus-library/nexus/core/runtime/: actor.py  context_store_types.py  event_bus.py  events.py  nexus_task.py
bittensor-nexus-library/nexus/examples/actors/: string_printer.py
bittensor-nexus-library/nexus/utils/: env.py  immutable_map.py  netuid.py  openrouter_client.py  subnet_settings.py  types.py
bittensor-nexus-library/tests/: conftest.py  test_block_beat.py  test_context_store.py  test_epoch_beat.py  test_exceptions.py  test_executor_communicator.py  test_flow_dsl.py  test_netuid.py  test_openrouter_config.py  test_openrouter_inference_communicator.py  test_openrouter_selection.py  test_rest_entry_point.py  test_router.py  test_task_input_output_creator.py  test_task_result_dispatcher.py  test_task_result_sampler.py  test_weight_setter.py  test_weight_setter_retry.py  transform_test_utils.py  utils.py
cat-images/: .env.compose.example  .env.facilitator.example  .env.miner.example  README.md  RUNBOOK.md  build_miner.sh  build_validator.sh  compose.yaml  pseudo.py-but-not-quite  pseudo.py-but-not-quite.py  pseudo.py-but-not-quite.py.pseudo  pyproject.toml  run_miner.sh  run_validator.sh
cat-images/cat_images/: cat_images.py  miner.py  subnet.py  subnet_models.py  validation_algorithm.py  validator.py  validator_settings.py
cat-images/cat_images/facilitator/: __init__.py  app.py  models.py  routing.py  settings.py  stores.py  submitter.py  worker.py
cat-images/cat_images/facilitator/routes/: ui.py
cat-images/cat_images/miner/: __main__.py  axon_updater.py  miner.py
cat-images/cat_images/validator/: __init__.py  __main__.py  validation_algorithm.py  validator.py  validator_settings.py  weighing_algorithm.py
cat-images/cat_images_subnet/: cat-images.drawio  cat_images.py  validator.py
cat-images/docker/: .env.validator-compose.example  docker-compose.miner.yaml  docker-compose.validator.yaml  facilitator.Dockerfile  miner.Dockerfile  validator.Dockerfile
cat-images/test_scripts/: fake_validator.py  miner_test.py
cat-images/tests/: conftest.py  miner_smoke_test.py  smoke_test.py  test_facilitator_submitter.py  test_validation_algorithm.py  test_validation_inference.py  test_validator_openrouter_config.py  test_validator_result.py  test_weighing_algorithm.py  validator_smoke_test.py
demos/cat-images/: .dockerignore  .env.compose.example  .env.facilitator.example  README.md  RUNBOOK.md  build_miner.sh  build_validator.sh  cat_images.drawio  compose.yaml  pseudo.py-but-not-quite.py.pseudo  pyproject.toml  run_miner.sh  run_validator.sh
demos/cat-images/cat_images/: subnet_models.py
demos/cat-images/cat_images/miner/: miner.py  (+2 more)
demos/cat-images/docker/: .env.miner-compose.example  .env.validator-compose.example  docker-compose.miner.yaml  docker-compose.validator.yaml  facilitator.Dockerfile  miner.Dockerfile  validator.Dockerfile
demos/cat-images/test_scripts/: fake_validator.py  miner_test.py
demos/cat-images/tests/: conftest.py  miner_smoke_test.py  test_docker_build_layout.py  test_facilitator_submitter.py  test_validation_inference.py  test_validator_openrouter_config.py  test_weighing_algorithm.py  validator_smoke_test.py
nexus-template/: AGENTS.md  README.md  pyproject.toml  pyrightconfig.json
nexus-template/docs/validator-authoring/: 05-patterns-and-recipes.md  08-cat-images-walkthrough.md
nexus-template/nexus/: __init__.py  actor.py  context_store.py  logging_utils.py  nexus_validator.py  piping.py
nexus-template/nexus/actors/: __init__.py  case_modifier.py  chain_schedule.py  mux.py  neuron_router.py  openrouter_client_provider.py  openrouter_payload_creator.py  openrouter_selection.py  payload_creator.py  pylon_client_provider.py  rest_entry_point.py  rest_entry_point_runtime.py  retry_strategy.py  s3_client_provider.py  s3_config.py  string_printer.py  stringify.py  task_input_output_creator.py  task_result_preparer.py  task_result_sampler.py  task_result_splitter.py  task_result_store_provider.py  task_result_storer.py  timestamper.py  uppercase_if_even.py  uppercase_input_lowercase_output.py  uppercase_or_error.py  weight_setter.py
nexus-template/nexus/piping/: dsl.py
nexus-template/nexus/runtime/: actor.py  event_bus.py  events.py
nexus-template/nexus/sources/: rest.py
nexus-template/nexus/transforms/: stringify.py  uppercase_or_error.py
nexus-template/nexus/utils/: chain.py  env.py  exceptions.py  netuid.py  openrouter_client.py  openrouter_config.py  types.py  utils.py
nexus-template/tests/: conftest.py  fake_pylon_client.py  nexus_task_test_setup.py  stringify.py  test_block_beat.py  test_context_store.py  test_epoch_beat.py  test_executor_communicator.py  test_flow_dsl.py  test_immutable_map.py  test_netuid.py  test_nexus_task.py  test_nexus_validator.py  test_openrouter_payload_creator.py  test_openrouter_selection.py  test_payload_creator.py  test_pylon_client_provider.py  test_rest_entry_point.py  test_retry_strategy.py  test_router.py  test_runtime.py  test_s3_config.py  test_task_input_output_creator.py  test_task_result_sampler.py  test_task_result_splitter.py  test_task_result_storer.py  test_timestamper.py  test_weight_setter.py  test_weight_setter_retry.py  transform_test_utils.py  utils.py
(+187 files in other folders)
