[project]
name = "bittensor-nexus-library"
requires-python = ">=3.14"
keywords = []
license = {text = "MIT"}
readme = "README.md"
authors = [
    { name = "Jakub Zytka", email = "jakub.zytka@reef.pl" },
    { name = "Kordian Kowalski", email = "kordian.kowalski@reef.pl" }
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dynamic = [
    "version",
]
dependencies = [
    "pydantic-settings",
    "pydantic",
    "httpx",
    "litestar[standard,prometheus]",
    "sniffio",
    "deepdiff",
    "bittensor-pylon-client",
    "boto3",
    # FIXME(https://reeftechnologies.atlassian.net/browse/BACT-393): remove this runtime dependency.
    "polyfactory",
]

[project.urls]
"Source" = "https://github.com/bittensor-church/bittensor-nexus-library"
"Issue Tracker" = "https://github.com/bittensor-church/bittensor-nexus-library/issues"
"Changelog" = "https://github.com/bittensor-church/bittensor-nexus-library/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling==1.29.0", "hatch-vcs==0.5.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/nexus/_version.py"

[tool.hatch.build]
exclude = [
    "/demos",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nexus"]

[dependency-groups]
format = [
    "ruff",
]
test = [
    "boto3-stubs[s3]",
    "polyfactory",
    "pytest",
    "tenacity",
    "pytest-cov",
    "moto[server]",
    "requests",
    "freezegun==1.5.5",
    "pytest==9.0.2",
    "pytest-apiver==0.1.0",
    "pytest-asyncio==1.3.0",
    "pytest-xdist==3.8.0",
]
lint = [
    "basedpyright",
    "codespell[toml]==2.4.2",
    "ruff==0.15.8",
    "types-freezegun==1.1.10",
    "types-python-dateutil==2.9.0.20260323",
    "types-requests==2.33.0.20260327",
]
dev = [
    "basedpyright>=1.36.1",
    "boto3-stubs[s3]",
    "ruff==0.15.8",
]

[tool.commitizen]
version_provider = "scm"
annotated_tag = true
tag_format = "v$version"
changelog_file = "CHANGELOG.md"
update_changelog_on_bump = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["demos"]
pythonpath = ["src", "tests"]  # allow importing nexus and test helpers
target_package_name = "nexus"  # required by pytest-apiver


[tool.ruff]
line-length = 120
target-version = "py314"
extend-exclude = ["demos"]

[tool.ruff.lint]
select = [
    "D",
    "E", "F", "I", "UP",
    "B",
    "TC005",
]
ignore = [
    "D100", "D105", "D107", "D200", "D202", "D203", "D205", "D212", "D400", "D401", "D415",
    "D101", "D102", "D103", "D104", # TODO remove once we have docstring for all public methods
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"test/**" = ["D", "F403", "F405"]

[tool.codespell]
skip = "*.min.js,uv.lock,demos/*"
ignore-words-list = "datas"

[tool.uv]
exclude-newer = "14 days"

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["src/nexus", "tests"]
exclude = ["demos"]
verboseOutput = true
useLibraryCodeForTypes = true
reportMissingTypeStubs = "warning"
reportUndefinedVariable = "error"
reportUnusedImport = "warning"
reportExplicitAny = "none"
venvPath = "."
venv = ".venv"
extraPaths = [".venv/lib/python3.14/site-packages"]
