[project]
name = "bittensor-nexus-library"
version = "0.1.0"
description = "Opinionated event-driven actor framework for building Bittensor subnets."
readme = "README.md"
authors = [
    { name = "Jakub Zytka", email = "jakub.zytka@reef.pl" },
    { name = "Kordian Kowalski", email = "kordian.kowalski@reef.pl" }
]
requires-python = ">=3.14"
license = { text = "BSD-3-Clause" }
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pydantic-settings",
    "pydantic",
    "httpx",
    "litestar[standard,prometheus]",
    "sniffio",
    "deepdiff",
    "bittensor-pylon-client",
    "boto3",
]

[project.urls]
homepage = "https://github.com/bittensor-church/nexus-poc/tree/main/bittensor-nexus-library"
repository = "https://github.com/bittensor-church/nexus-poc"
documentation = "https://github.com/bittensor-church/nexus-poc/tree/main/bittensor-nexus-library#readme"

[project.optional-dependencies]
format = [
    "ruff",
]
test = [
    "basedpyright",
    "boto3-stubs[s3]",
    "polyfactory",
    "pytest",
    "tenacity",
    "pytest-cov",
    "moto[server]",
    "requests",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E", "F", "I", "UP", "B", "TC005",
]
#ignore = [
#    "D100", "D105", "D107", "D200", "D202", "D203", "D205", "D212", "D400", "D401", "D415",
#    "D101", "D102","D103", "D104",
#    "E501", "B027", "B904", "B905",
#]
preview = true
explicit-preview-rules = true
extend-select = ["DOC501"]

[tool.ruff.lint.per-file-ignores]

"__init__.py" = ["I", "F401"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
]

[tool.pytest.ini_options]
filterwarnings = [
"error::pytest.PytestUnhandledThreadExceptionWarning",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
lint = [
    "basedpyright>=1.36.1",
    "boto3-stubs[s3]",
    "ruff",
]
test = [
    "boto3-stubs[s3]",
    "polyfactory",
    "pytest",
    "tenacity",
    "pytest-cov",
    "moto[server]",
    "requests",
]

[tool.uv]
# uv-specific settings can go here

[tool.hatch.build.targets.wheel]
packages = ["nexus"]

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["nexus", "tests"]
verboseOutput = true
useLibraryCodeForTypes = true
reportMissingTypeStubs = "warning"
reportUndefinedVariable = "error"
reportUnusedImport = "warning"
reportExplicitAny = "none"
venvPath = "."
venv = ".venv"
extraPaths = [".venv/lib/python3.14/site-packages"]
