[project]
name = "cat-images"
version = "0.1.0"
description = "A cat-images subnet"
authors = [
    { name = "Jakub Zytka", email = "jakub.zytka@reef.pl" },
    { name = "Kordian Kowalski", email = "kordian.kowalski@reef.pl" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic-settings",
    "pydantic",
    "litestar[standard,prometheus]>=2.21.0",
    "attrs",
    "bittensor-nexus-library",
]

[project.optional-dependencies]
dev = [
    "uv",
    "pytest",
    "pytest-asyncio>=1.0.0",
    "basedpyright>=1.36.1",
    "ruff>=0.14.8",
    "ty>=0.0.1a32",
]
format = [
    "ruff",
    "ty",
    "pyright",
    "freezegun",
    "sentry-sdk[litestar]",
]

[dependency-groups]
miner = ["bittensor==9.12.*"]
facilitator = ["boto3", "httpx"]
validator = []

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E", "F", "I", "UP", "B", "TC005",
]
preview = true
explicit-preview-rules = true
extend-select = ["DOC501"]

[tool.ruff.lint.per-file-ignores]

"__init__.py" = ["I", "F401"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
]

[project.urls]
homepage = "https://github.com/bittensor-church/nexus-poc"
repository = "https://github.com/bittensor-church/nexus-poc"
documentation = "https://github.com/bittensor-church/nexus-poc#readme"

[tool.uv]

[tool.uv.sources]
bittensor-nexus-library = { path = "../bittensor-nexus-library", editable = true }

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["cat_images"]
useLibraryCodeForTypes = true
reportMissingTypeStubs = "warning"
reportUndefinedVariable = "error"
reportUnusedImport = "warning"
stubPath = ".pyright-stubs"
venvPath = "."
venv = ".venv"
extraPaths = [".venv/lib/python3.14/site-packages"]
exclude = [
  "cat_images/facilitator",
  "cat_images/miner",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cat_images"]
