[project]
name = "cat-images"
version = "0.1.0"
description = "A cat-images subnet"
authors = [
    { name = "Jakub Zytka", email = "jakub.zytka@reef.pl" },
    { name = "Kordian Kowalski", email = "kordian.kowalski@reef.pl" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic-settings",
    "pydantic",
    "litestar[standard,prometheus]>=2.21.0",
    "attrs",
    "bittensor-nexus-library",
]

[project.optional-dependencies]
dev = [
    "uv",
    "pytest",
    "pytest-asyncio>=1.0.0",
    "basedpyright>=1.36.1",
    "ruff>=0.14.8",
    "ty>=0.0.1a32",
]
format = [
    "ruff",
    "ty",
    "pyright",
    "freezegun",
    "sentry-sdk[litestar]",
]

[dependency-groups]
miner = [
    "bittensor==9.12.*",
    # bittensor pins scalecodec==1.2.12 directly but leaves async-substrate-interface
    # unbounded; >=2.0.0 of it switched to `cyscale`, which conflicts with scalecodec at
    # import time. Stay below 2.0 until bittensor itself drops its scalecodec dependency.
    "async-substrate-interface<2",
]
facilitator = ["boto3", "httpx"]
validator = []

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E", "F", "I", "UP", "B", "TC005",
]
preview = true
explicit-preview-rules = true
extend-select = ["DOC501"]

[tool.ruff.lint.per-file-ignores]

"__init__.py" = ["I", "F401"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project.urls]
homepage = "https://github.com/bittensor-church/nexus-poc"
repository = "https://github.com/bittensor-church/nexus-poc"
documentation = "https://github.com/bittensor-church/nexus-poc#readme"

[tool.uv.sources]
bittensor-nexus-library = { path = "../..", editable = true }

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["cat_images"]
useLibraryCodeForTypes = true
reportMissingTypeStubs = "warning"
reportUndefinedVariable = "error"
reportUnusedImport = "warning"
extraPaths = ["../../src", ".", "tests"]
exclude = [
  "cat_images/facilitator",
  "cat_images/miner",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cat_images"]
